Textbox area styling + overflow character sprite fixed
- centered name in name tag
- added Nunito font and changed font size of said text according to screen size
- adjusted size of text box
-  added overlay in background of text box
- attempted borders for text box
- broke up a really long line in script into two

--- a/style/main.css
+++ b/style/main.css
@@ -88,6 +88,11 @@ button:hover {
 [data-component="message-modal"] {
 	background-color: black;
 }
+
+[data-content=visuals] {
+	overflow: hidden;
+}
+
 /* Choice Buttons style */
 [data-component="choice-container"] button {
 
@@ -101,6 +106,8 @@ button:hover {
 /* Text Box styling */
 [data-component="text-box"] {
 	background-color: transparent;
+	min-height: 30%;
+	max-height: 35%;
 }
 
 /* Character Name Style */
@@ -209,35 +216,49 @@ input[type=range]::-ms-fill-upper {
 
 /** Medium Devices, Tablets (992px)**/
 @media screen and (min-width: 62em) {
-
+	[data-ui="say"] {
+		font-size: 24px;
+	}
 }
 
 /** HD Screen, Large Devices, Wide Screens, Desktop (1200px) **/
 @media screen and (min-width: 75em) {
-
+	[data-ui="say"] {
+		font-size: 24px;
+	}
 }
 
 /** Full HD Screen, Large Devices, Wide Screens, Large Desktops (1920px) **/
 @media screen and (min-width: 120em) {
-
+	[data-ui="say"] {
+		font-size: 28px;
+	}
 }
 
 /** Retina Screen , Large Devices, Wide Screens(2560px) **/
 @media screen and (min-width: 160em) {
-
+	[data-ui="say"] {
+		font-size: 28px;
+	}
 }
 
 /** 4k Screens, Large Devices, Wide Screens (3840px) **/
 @media screen and (min-width: 240em) {
-
+	[data-ui="say"] {
+		font-size: 28px;
+	}
 }
 
 /** 5k Screens, Large Devices, Wide Screens (5000px) **/
 @media screen and (min-width: 312.5em) {
-
+	[data-ui="say"] {
+		font-size: 28px;
+	}
 }
 
 /** 8k Screens, Large Devices, Wide Screens (8000px) **/
 @media screen and (min-width: 500em) {
-
+	[data-ui="say"] {
+		font-size: 28px;
+	}
 }
